update animations. fix responsive images on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,12 @@ div#divider > hr {
 	min-width: 150px;
 	padding:15px;
 	display:inline-block;
+	border-radius:5px;
+	border: 1px solid #fff;
 }
 
 img {
 	width:100%;
-	min-width: 150px;
 }
 
 .center {
